[gd_scene load_steps=3 format=2]

[ext_resource path="res://wordsChoice.gd" type="Script" id=1]
[ext_resource path="res://fonts/phonetic.tres" type="Theme" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 959.0
margin_bottom = 520.0
theme = ExtResource( 2 )
custom_constants/separation = 100
alignment = 1

[node name="wordsAvailableContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 400.0
margin_bottom = 440.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 2 )
custom_constants/separation = 10

[node name="availableWords" type="Label" parent="MarginContainer/HBoxContainer/wordsAvailableContainer"]
margin_right = 400.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Les mots disponibles :"

[node name="editContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 500.0
margin_right = 839.0
margin_bottom = 440.0
theme = ExtResource( 2 )
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/editContainer"]
margin_right = 339.0
margin_bottom = 68.0
rect_clip_content = true

[node name="addWordField" type="TextEdit" parent="MarginContainer/HBoxContainer/editContainer/HBoxContainer"]
visible = false
margin_right = 150.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 0 )

[node name="newWord" type="Label" parent="MarginContainer/HBoxContainer/editContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 200.0
margin_bottom = 65.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="addWord" type="Button" parent="MarginContainer/HBoxContainer/editContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 339.0
margin_bottom = 68.0
text = "Ajouter"

[node name="keyBoardContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/editContainer"]
margin_top = 78.0
margin_right = 339.0
margin_bottom = 78.0

[node name="gridKeyboard" type="GridContainer" parent="MarginContainer/HBoxContainer/editContainer/keyBoardContainer"]
margin_left = 169.0
margin_right = 169.0
columns = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stateAddLabel" type="Label" parent="MarginContainer/HBoxContainer/editContainer"]
margin_top = 88.0
margin_right = 339.0
margin_bottom = 150.0

[node name="retour" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
theme = ExtResource( 2 )
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/HBoxContainer/editContainer/HBoxContainer/addWord" to="." method="_on_addWord_pressed"]
[connection signal="pressed" from="retour" to="." method="_on_Retour_pressed"]
